# rust-raid

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
_common/: Cargo.toml  README.md
_lib/: Cargo.toml
advanced/: Cargo.toml  README.md
advanced/concurrent-programming/: Cargo.toml
advanced/concurrent-programming/src/: spawning.rs  threading.rs
advanced/error-handling/: Cargo.toml
advanced/error-handling/src/: panic.rs  propagation.rs  result.rs
advanced/memory-management/: Cargo.toml
advanced/memory-management/src/: ownership.rs  unsafe.rs
advanced/meta-programming/: Cargo.toml  dsl.rs  macro-rules.rs
advanced/meta-programming/src/: derive-macro.rs  macro-rules.rs
advanced/meta-programming/xml-derive/: Cargo.toml
advanced/meta-programming/xml-derive/src/: lib.rs
advanced/operator-overloading/: Cargo.toml
advanced/operator-overloading/src/: struct-overloading.rs
advanced/operator-overloading/src/examples/: mod.rs  score.rs  vector.rs
advanced/smart-pointers/: Cargo.toml
advanced/smart-pointers/src/: arc-mutex.rs  box-pointer.rs  box.rs  rc.rs  refcell.rs
advanced/src/memory-management/: unsafe.rs
advanced/systems-programming/: Cargo.toml  conditional-compilation.rs  inline-assembly.rs
advanced/systems-programming/src/: inline-assembly.rs
advanced/types-and-generics/: Cargo.toml  generics.rs  traits.rs
algorithms/: Cargo.toml  README.md
algorithms/src/greedy/: huffman_coding.rs  kruskal.rs
algorithms/src/misc/: luhn.rs
algorithms/src/searching/: binary_search.rs  linear_search.rs
algorithms/src/sorting/: merge_sort.rs  quick_sort.rs  selection_sort.rs
crates/_common/: Cargo.toml
crates/_common/src/: lib.rs
crates/advanced/concurrent-programming/: Cargo.toml
crates/advanced/concurrent-programming/src/: spawning.rs  threading.rs
crates/advanced/error-handling/: Cargo.toml
crates/advanced/error-handling/src/: custom-error.rs  result.rs
crates/advanced/memory-management/: Cargo.toml
crates/advanced/meta-programming/: Cargo.toml
crates/advanced/meta-programming/src/: macro-rules.rs
crates/advanced/meta-programming/xml-derive/: Cargo.toml
crates/advanced/operator-overloading/: Cargo.toml
crates/advanced/operator-overloading/src/: main.rs
crates/advanced/operator-overloading/src/examples/: matrix.rs  vector.rs
crates/advanced/smart-pointers/src/: rc.rs  refcell.rs
crates/advanced/systems-programming/: Cargo.toml
crates/advanced/types-and-generics/: Cargo.toml
crates/advanced/types-and-generics/src/: generics.rs
crates/design-patterns/: Cargo.toml
crates/design-patterns/src/: builder.rs  decorator.rs  observer.rs  singleton.rs
crates/dsa/: Cargo.toml
crates/dsa/src/algorithms/greedy/: dfs.rs
crates/dsa/src/algorithms/misc/: luhn.rs
crates/dsa/src/algorithms/searching/: binary_search.rs  linear_search.rs
crates/dsa/src/structures/: linked-list-add.rs  stack.rs  trie.rs
crates/macros/: Cargo.toml
crates/macros/shape/: Cargo.toml
crates/macros/shape_derive/: Cargo.toml
crates/macros/shape_derive/src/: lib.rs
crates/problem-solving/: Cargo.toml  README.md
crates/problem-solving/src/basic/: color-converter.rs  comprehension.rs  gcd.rs
crates/problem-solving/src/dp/: consecutive_groups.rs  nth-distinct-number.rs
data-structures/: Cargo.toml
data-structures/src/: binary_tree.rs  doubly_linked_list.rs  ds101_linked_list_add.rs  longest-subarray.rs  missing-number.rs  queue.rs  trie.rs
design-patterns/: Cargo.toml
design-patterns/src/: adapter.rs  command.rs  factory.rs  observer.rs  strategy.rs
dsa/: Cargo.toml
dsa/src/algorithms/greedy/: kruskal.rs
dsa/src/algorithms/sorting/: bubble_sort.rs  insertion_sort.rs
macros/: Cargo.toml  README.md
macros/shape/: Cargo.toml
macros/shape_derive/: Cargo.toml
macros/shape_derive/src/: lib.rs
macros/src/: declarative.rs
problem-solving/: Cargo.toml  README.md
problem-solving/src/basic/: color-converter.rs  comprehension.rs  gcd.rs  matrix_multiplication.rs  practical_number.rs
problem-solving/src/dp/: coin_change.rs  consecutive_groups.rs  longest-substring.rs  nth-distinct-number.rs  repeat.rs
projects/cget/: Cargo.toml
projects/cget/src/: downloader.rs  main.rs
projects/pandas/: Cargo.toml
projects/ruscrypt/: Cargo.toml
projects/todo-web/: Cargo.toml  README.md  index.html
projects/todo-web/src/: api.rs  main.rs  todo.rs
projects/todo-web/static/css/: index.css
projects/todo-web/static/js/: index.js
projects/vault/: Cargo.toml  README.md
projects/vault/src/: main.rs  vault.rs
