[workspace]
resolver = "3"

members = [
    "_common",
    # topics
    "algorithms",
    "data-structures",
    "design-patterns",
    "macros",
    "problem-solving",
    # Advanced
    "advanced/memory-management",
    "advanced/meta-programming",
    "advanced/systems-programming",
    "advanced/types-and-generics",
    "advanced/concurrent-programming",
    "advanced/error-handling",
    # projects
    "projects/pandas",
    "projects/ruscrypt",
    "projects/vault",
    "projects/todo-web",
]

[workspace.package]
version = "0.4.0"
authors = ["Sudip Ghimire"]
edition = "2024"
rust-version = "1.85"


[workspace.dependencies]
common = { path = "./_common" }
