[workspace]
resolver = "3"

members = [
    "_common",
    # topics
    "algorithms",
    "data-structures",
    "design-patterns",
    "macros",
    "problem-solving",
    # Advanced
    "advanced/memory-management",
    "advanced/meta-programming",
    "advanced/systems-programming",
    "advanced/types-and-generics",
    "advanced/concurrent-programming",
    "advanced/error-handling",
    "advanced/operator-overloading",
    # projects
    "projects/pandas",
    "projects/ruscrypt",
    "projects/vault",
    "projects/todo-web", "advanced/smart-pointers",
]

[workspace.package]
version = "0.6.0"
authors = ["Sudip Ghimire"]
edition = "2024"
rust-version = "1.85"


[workspace.dependencies]
common = { path = "./_common" }
