[workspace]
resolver = "3"

members = [
"crates/dsa",
"crates/design-patterns",
"crates/problem-solving",
"crates/macros",
"crates/advanced/*",
"projects/*",
]

[workspace.package]
version = "0.11.0"
authors = ["Sudip Ghimire"]
edition = "2024"
rust-version = "1.85"


[workspace.dependencies]
utils = { path = "./crates/utils" }
