[package]
name = "advanced"
version = "0.1.0"
edition = "2024"

[dependencies]


# ----------------------------[ Memory Management ]----------------------------

[[bin]]
name = "ownership"
path = "memory-management/ownership.rs"

[[bin]]
name = "unsafe"
path = "memory-management/unsafe.rs"

# ----------------------------[ Types and Generics ]----------------------------

[[bin]]
name = "generics"
path = "types-and-generics/generics.rs"

[[bin]]
name = "traits"
path = "types-and-generics/traits.rs"

# --------------------------[ Systems and Low Levels ]--------------------------

[[bin]]
name = "cc"
path = "systems-programming/conditional-compilation.rs"

[[bin]]
name = "assembly"
path = "systems-programming/inline-assembly.rs"

# --------------------------[ Meta Programming ]--------------------------

[[bin]]
name = "macro"
path = "meta-programming/macro-rules.rs"

[[bin]]
name = "dsl"
path = "meta-programming/dsl.rs"
