[package]
name = "algorithms"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }


# =========================[ Searching Algorithms ]=============================
[[bin]]
name = "linear_search"
path = "src/searching/linear_search.rs"
[[bin]]
name = "binary_search"
path = "src/searching/binary_search.rs"
# ==========================[ Sorting Algorithms ]==============================
[[bin]]
name = "bubble_sort"
path = "src/sorting/bubble_sort.rs"

[[bin]]
name = "selection_sort"
path = "src/sorting/selection_sort.rs"

[[bin]]
name = "insertion_sort"
path = "src/sorting/insertion_sort.rs"

[[bin]]
name = "quick_sort"
path = "src/sorting/quick_sort.rs"

[[bin]]
name = "merge_sort"
path = "src/sorting/merge_sort.rs"
# ===========================[ Greedy Algorithms ]==============================
[[bin]]
name = "huffman"
path = "src/greedy/huffman_coding.rs"

[[bin]]
name = "kruskal"
path = "src/greedy/kruskal.rs"
