[package]
name = "data-structures"
version = "0.9.0"
edition = "2024"

[dependencies]


# ==================================[ Arrays ]==================================
[[bin]]
name = "missing-number"
path = "src/missing-number.rs"

[[bin]]
name = "longest-subarray"
path = "src/longest-subarray.rs"

# ===============================[ Linked Lists ]===============================
[[bin]]
name = "linked-list-add"
path = "src/linked-list-add.rs"

[[bin]]
name = "doubly_linked_list"
path = "src/doubly_linked_list.rs"
# ==================================[ Stacks ]==================================
[[bin]]
name = "stack"
path = "src/stack.rs"
# ==================================[ Queues ]==================================
[[bin]]
name = "queue"
path = "src/queue.rs"
# ===============================[ Binary Tree ]================================
[[bin]]
name = "binary_tree"
path = "src/binary_tree.rs"
# ===============================[ Binary Tree ]================================
[[bin]]
name = "trie"
path = "src/trie.rs"
