[package]
name = "error-handling"
version = "0.1.0"
edition.workspace = true

[dependencies]


# =================================[ Binaries ]=================================
[[bin]]
name = "panic"
path = "src/panic.rs"

[[bin]]
name = "result"
path = "src/result.rs"

[[bin]]
name = "propagation"
path = "src/propagation.rs"
