[package]
name = "meta-programming"
version = "0.1.0"
edition = "2024"

[dependencies]
xml-derive = { path = "xml-derive" }


# ---------------------------------[ Binaries ]---------------------------------
[[bin]]
name = "macro"
path = "src/macro-rules.rs"

[[bin]]
name = "dsl"
path = "src/dsl.rs"

[[bin]]
name = "derive"
path = "src/derive-macro.rs"
