[package]
name = "design_patterns"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
rand = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
utils = { workspace = true }


[[bin]]
name = "singleton"
path = "src/singleton.rs"


[[bin]]
name = "factory"
path = "src/factory.rs"

[[bin]]
name = "builder"
path = "src/builder.rs"

[[bin]]
name = "decorator"
path = "src/decorator.rs"

[[bin]]
name = "observer"
path = "src/observer.rs"

[[bin]]
name = "strategy"
path = "src/strategy.rs"

[[bin]]
name = "command"
path = "src/command.rs"

[[bin]]
name = "adapter"
path = "src/adapter.rs"
