[package]
name = "cget"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
