[package]
name = "concurrent-programming"
version = "0.9.0"
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "*" }
rand = { version = "*" }
reqwest = "*"

# ---------------------------------[ Binaries ]---------------------------------

[[bin]]
name = "threading"
path = "src/threading.rs"

[[bin]]
name = "spawning"
path = "src/spawning.rs"
